# mapper

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DESIGN-tiled-raster.md  INSTALL.md  README.md  SUPPORT.md  codespell.sh  lsan_suppress.txt.in  requirements-build.txt  resources.qrc  suppress.txt.in  ubsan_suppress.txt.in  vcpkg.json
doc/api/: CMakeLists.txt  Doxyfile.in
doc/licensing/: CMakeLists.txt  clipper2-2.0.1.txt  linux-distribution.cmake  rust-dependencies.hbs
packaging/: CMakeLists.txt
packaging/android/: AndroidManifest.xml  build-gh-apk.sh  superbuild-qt-5.12.10-gcc11.patch
packaging/linux/: org.openorienteering.Mapper.coc.metainfo.xml  package-release-assets.sh
src/: CMakeLists.txt  main.cpp  mapper_config.h.in  mapper_resource.cpp  settings.cpp  settings.h
src/collaboration/: managed_map_workspace.cpp  managed_map_workspace.h  map_hub_api_client.cpp  map_hub_api_client.h  map_hub_credentials.cpp  map_hub_credentials.h  map_hub_imagery_catalog.cpp  map_hub_imagery_catalog.h  map_hub_renderer.cpp
src/core/: app_permissions.cpp  app_permissions.h  autosave.cpp  crs_template_implementation.cpp  document_path.cpp  document_path.h  georeferencing.cpp  georeferencing.h  map.cpp  map.h  map_coord.cpp  map_coord.h  map_grid.cpp  map_grid.h  map_information.cpp  map_part.cpp  map_printer.cpp  map_printer.h  map_view.cpp  map_view.h  storage_location.cpp  storage_location.h  storage_location_ios.mm  track.cpp  track.h
src/fileformats/: file_format.cpp  file_format_registry.cpp  file_import_export.cpp  iof_course_export.cpp  kml_course_export.cpp  ocd_file_export.cpp  ocd_file_export.h  ocd_file_import.cpp  ocd_file_import.h  ocd_parameter_stream_reader.cpp  ocd_parameter_stream_reader.h  ocd_types.cpp  ocd_types.h  xml_file_format.cpp
src/gdal/: CMakeLists.txt  gdal_file.cpp  gdal_image_reader.cpp  gdal_image_reader.h  gdal_manager.cpp  gdal_manager.h  gdal_settings_page.cpp  gdal_template.cpp  gdal_template.h  kmz_groundoverlay_export.cpp  kmz_groundoverlay_export.h  ogr_file_format.cpp  ogr_file_format_p.h  ogr_template.cpp  ogr_template.h  online_imagery_source.h  online_imagery_template_builder.cpp  online_imagery_template_builder.h
src/gnss/: CMakeLists.txt  gga_generator.cpp  gga_generator.h  gnss_fusion_engine.cpp  gnss_fusion_engine.h  gnss_observation.h  gnss_position.h  gnss_position_source.cpp  gnss_position_source.h  gnss_raw_logger.cpp  gnss_raw_logger.h  gnss_session.cpp  gnss_session.h  gnss_solution.h  gnss_state.h
src/gui/: about_dialog.cpp  action_icon.cpp  action_icon.h  autosave_dialog.cpp  color_dialog.cpp  configure_grid_dialog.cpp  file_dialog.cpp  file_dialog.h  georeferencing_dialog.cpp  ios_safe_area.h  ios_safe_area.mm  main_window.cpp  main_window.h  main_window_controller.cpp  main_window_controller.h  map_hub_dialog.cpp  map_hub_dialog.h  print_progress_dialog.cpp  print_tool.cpp  print_tool.h  print_widget.cpp  print_widget.h  scaling_icon_engine.cpp  scaling_icon_engine.h  scaling_icon_engine_plugin.cpp  settings_dialog.cpp  settings_dialog.h  task_dialog.cpp  task_dialog.h  text_browser_dialog.cpp  text_browser_dialog.h  touch_cursor.cpp  touch_cursor.h  util_gui.cpp  util_gui.h
src/imagery/: CMakeLists.txt  arcgis_tile_service.cpp  arcgis_tile_service.h  imagery_catalog_repository.cpp  imagery_catalog_repository.h  imagery_catalog_store.cpp  imagery_catalog_store.h  imagery_network_permissions.cpp  imagery_network_permissions.h  imagery_source.cpp  imagery_source.h  imagery_source_snapshot.cpp  imagery_source_snapshot.h  manual_imagery_source.cpp  manual_imagery_source.h  oic_catalog.cpp  oic_catalog.h  tile_matrix_set.cpp  tile_matrix_set.h  tile_network_manager.cpp  tile_network_manager.h
src/presentation/: native_surface.cpp  native_surface.h  native_surface_state.h  vello_canvas.cpp  vello_canvas.h
src/printsupport/: CMakeLists.txt
src/render/: frame_packet.h  frame_pipeline.cpp  frame_pipeline.h  overlay_scene.cpp  overlay_scene.h  qpainter_frame_renderer.cpp  qpainter_frame_renderer.h  qpainter_renderer.cpp  qpainter_renderer.h  qt_render_bridge.cpp  qt_render_bridge.h  raster_layer_planner.cpp  raster_layer_planner.h  render_ir.cpp  render_ir.h  render_snapshot.cpp  render_snapshot.h  template_layer_planner.cpp  template_layer_planner.h  vello_renderer.cpp  vello_renderer.h
src/sensors/: CMakeLists.txt  compass.cpp  compass.h  fake_position_plugin.cpp  fake_position_plugin.h  gnss_map_overlay.cpp  gnss_map_overlay.h  gnss_position_bridge.cpp  gnss_position_bridge.h  gnss_track_recorder.cpp  gnss_track_recorder.h  gps_display.cpp  gps_display.h  gps_temporary_markers.cpp  gps_temporary_markers.h  gps_track_recorder.cpp  nmea_position_plugin.cpp  nmea_position_plugin.h  powershell_position_plugin.cpp  powershell_position_plugin.h  powershell_position_source.cpp  powershell_position_source.h  sensors_settings_page.cpp
src/templates/: online_raster_template.cpp  online_raster_template.h  paint_on_template_feature.cpp  paint_on_template_tool.cpp  paint_on_template_tool.h  raster_resource_manager.cpp  raster_resource_manager.h  template.cpp  template.h  template_map.h  (+14 more)
test/: CMakeLists.txt  arcgis_tile_service_t.cpp  arcgis_tile_service_t.h  autosave_t.cpp  boolean_tool_t.cpp  coord_xml_t.cpp  coord_xml_t.h  document_path_t.cpp  document_path_t.h  duplicate_equals_t.cpp  encoding_t.cpp  encoding_t.h  file_format_t.cpp  file_format_t.h  frame_pipeline_t.cpp  frame_pipeline_t.h  gdal_tiled_t.cpp  gdal_tiled_template_t.cpp  gdal_tiled_template_t.h  georeferencing_t.cpp  gnss_protocol_t.cpp  gnss_protocol_t.h  imagery_catalog_repository_t.cpp  imagery_catalog_repository_t.h  imagery_catalog_store_t.cpp  imagery_catalog_store_t.h  imagery_core_t.cpp  imagery_core_t.h  imagery_network_permissions_t.cpp  imagery_network_permissions_t.h  imagery_source_model_t.cpp  imagery_source_model_t.h  key_value_container_t.cpp  locale_t.cpp  locale_t.h  manual_imagery_source_t.cpp  manual_imagery_source_t.h  map_hub_workspace_t.cpp  map_hub_workspace_t.h  map_printer_t.cpp  (+38 more)
(+294 files in other folders)
